Fix: resolve issue where reversed `CopyWithBento` components would not adpot single-column layout on small screens

--- a/src/styles/shared/CopyWithBento.css
+++ b/src/styles/shared/CopyWithBento.css
@@ -39,8 +39,13 @@
 }
 
 @media screen and (max-width: 1000px) {
-	.col-content-container {
-		grid-template-columns: auto;
-		gap: 2rem;
+	.col-content-container,
+	.col-content-container.reverse {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.col-content-container.reverse {
+		flex-direction: column-reverse;
 	}
 }
